--- a/excursion/index.html
+++ b/excursion/index.html
@@ -12,7 +12,26 @@
       <a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html">
         Download Excursion (Coming soon!)</a>
     </p>
-
+    <p>
+      <video>
+         <source src="./resources/videos/excursion.mp4" type="video/mp4">
+       </video>
+    </p>
+    <h2>Your personal travel guide</h2>
+    <p>
+      Excursion remembers places you like, and recommends new points of interest around you.
+    </p>
+    <p>
+      <img src="./resources/images/camp.jpg">
+    </p>
+    <p>
+      <img src="./resources/images/phone.png">
+    </p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p>
+      <a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html">
+        Download Excursion (Coming soon!)</a>
+      </p>
 
   </body>
 </html>
