--- a/excursion/index.html
+++ b/excursion/index.html
@@ -8,7 +8,7 @@
   <body>
 
     <h1>Discover hidden places in the world around you</h1>
-    <p>
+    <p class="link">
       <a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html">
         Download Excursion (Coming soon!)</a>
     </p>
@@ -18,7 +18,7 @@
        </video>
     </p>
     <h2>Your personal travel guide</h2>
-    <p>
+    <p class="text">
       Excursion remembers places you like, and recommends new points of interest around you.
     </p>
     <p>
@@ -28,10 +28,13 @@
       <img src="./resources/images/phone.png">
     </p>
     <h2>Coming Soon for iPhone and Android</h2>
-    <p>
+    <p class="link">
       <a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html">
         Download Excursion (Coming soon!)</a>
       </p>
+      <footer>
+          &copy; Excursion
+      </footer>
 
   </body>
 </html>
