--- a/excursion/index.html
+++ b/excursion/index.html
@@ -8,12 +8,12 @@
   <body>
 
     <h1>Discover hidden places in the world around you</h1>
-    <p class="link">
+    <p>
       <a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html">
         Download Excursion (Coming soon!)</a>
     </p>
     <p>
-      <video>
+      <video autoplay loop>
          <source src="./resources/videos/excursion.mp4" type="video/mp4">
        </video>
     </p>
@@ -28,7 +28,7 @@
       <img src="./resources/images/phone.png">
     </p>
     <h2>Coming Soon for iPhone and Android</h2>
-    <p class="link">
+    <p>
       <a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html">
         Download Excursion (Coming soon!)</a>
       </p>
