Added initial CSS.

--- a/broadway/index.html
+++ b/broadway/index.html
@@ -9,13 +9,11 @@
 
     <div class="header">
       <h1>Broadway Design</h1>
-      <ul>
-        <li>Home</li>
-        <li>Process</li>
-        <li>Work</li>
-        <li>Team</li>
-        <li>Contact</li>
-      </ul>
+        <p class="link"><a href="">Home</a></p>
+        <p class="link"><a href="">Process</a></p>
+        <p class="link"><a href="">Work</a></p>
+        <p class="link"><a href="">Team</a></p>
+        <p class="link"><a href="">Contact</a></p>
     </div>
 
     <div>
@@ -73,11 +71,11 @@
 
     <footer>
       &copy; Broadway 2017
-      Home
-      About
-      Work
-      Team
-      Contact
+      <a href="">Home</a>
+      <a href="">About</a>
+      <a href="">Work</a>
+      <a href="">Team</a>
+      <a href="">Contact</a>
     </footer>
 
   </body>
