Fixed links and header image size.

--- a/broadway/index.html
+++ b/broadway/index.html
@@ -9,11 +9,13 @@
 
     <div class="header">
       <h1>Broadway Design</h1>
-        <p class="link"><a href="">Home</a></p>
-        <p class="link"><a href="">Process</a></p>
-        <p class="link"><a href="">Work</a></p>
-        <p class="link"><a href="">Team</a></p>
-        <p class="link"><a href="">Contact</a></p>
+        <p>
+          <div class="linkpadding"><a href="#" class="link">Home</a><br></div>
+          <div class="linkpadding"><a href="#" class="link">Process</a><br></div>
+          <div class="linkpadding"><a href="#" class="link">Work</a><br></div>
+          <div class="linkpadding"><a href="#" class="link">Team</a><br></div>
+          <div><a href="#" class="link">Contact</a></div>
+      </p>
     </div>
 
     <div>
@@ -71,11 +73,11 @@
 
     <footer>
       &copy; Broadway 2017
-      <a href="">Home</a>
-      <a href="">About</a>
-      <a href="">Work</a>
-      <a href="">Team</a>
-      <a href="">Contact</a>
+      <a href="#" class="footerlink">Home</a>
+      <a href="#" class="footerlink">About</a>
+      <a href="#" class="footerlink">Work</a>
+      <a href="#" class="footerlink">Team</a>
+      <a href="#" class="footerlink">Contact</a>
     </footer>
 
   </body>
